Add privacy policy and update app to reference it
Added privacy_policy.html and markdown.md with the privacy policy content. Updated index.html to include a notice and link to the privacy policy. Removed docker-compose.yml as part of project cleanup.

--- a/weather_station/assets/index.html
+++ b/weather_station/assets/index.html
@@ -51,7 +51,7 @@
         <div class="content-wrapper">
             <div class="text-center mb-5">
                 <h1 class="text-gradient">Weather Station</h1>
-                <p class="lead">Professional Weather Analytics Platform</p>
+                <p class="lead">Professional Weather Analytics Platform. <sub>By using this app, you agree to the <a href="/assets/privacy_policy.html">Privacy Policy</a></sub></p>
                 <span class="badge bg-primary">Version 2.0.0</span>
             </div>
 
