--- a/weather_station/assets/weather_statistics.html
+++ b/weather_station/assets/weather_statistics.html
@@ -206,28 +206,12 @@
     </div>
 
     <script>
-        // Weather parameters mapping
-        const weatherParams = {
+        // Weather parameters mapping - will be loaded dynamically
+        let weatherParams = {
             'temperature_2m': 'Temperature (°C)',
             'relative_humidity_2m': 'Relative Humidity (%)',
-            'dew_point_2m': 'Dew Point (°C)',
-            'apparent_temperature': 'Apparent Temperature (°C)',
-            'precipitation_probability': 'Precipitation Probability (%)',
-            'precipitation': 'Precipitation (mm)',
-            'rain': 'Rain (mm)',
-            'showers': 'Showers (mm)',
-            'snowfall': 'Snowfall (cm)',
-            'snow_depth': 'Snow Depth (m)',
-            'pressure_msl': 'Pressure (hPa)',
-            'surface_pressure': 'Surface Pressure (hPa)',
-            'cloud_cover': 'Cloud Cover (%)',
-            'visibility': 'Visibility (m)',
-            'uv_index': 'UV Index',
-            'wind_speed_10m': 'Wind Speed (km/h)',
-            'wind_direction_10m': 'Wind Direction (°)',
-            'wind_gusts_10m': 'Wind Gusts (km/h)',
-            'soil_temperature_0cm': 'Soil Temperature (°C)',
-            'soil_moisture_0_to_1cm': 'Soil Moisture (%)'
+            'pressure_msl': 'Pressure MSL (hPa)',
+            'wind_speed_10m': 'Wind Speed (km/h)'
         };
 
         // Statistical functions
@@ -398,6 +382,22 @@
             document.getElementById('dataPointCount').textContent = dataPoints.toLocaleString();
         }
 
+        // Function to load available parameters from API
+        async function loadAvailableParameters() {
+            try {
+                const response = await fetch('/api/data/parameters');
+                if (response.ok) {
+                    const result = await response.json();
+                    weatherParams = result.parameters;
+                    console.log(`Loaded ${result.total_available} available parameters`);
+                } else {
+                    console.warn('Failed to load available parameters, using defaults');
+                }
+            } catch (error) {
+                console.warn('Error loading available parameters:', error);
+            }
+        }
+
         // Initialize
         function populateParamSelects() {
             param1Select.innerHTML = '';
@@ -415,7 +415,9 @@
                 param2Select.appendChild(option2);
             });
 
-            param2Select.selectedIndex = 1;
+            if (param2Select.options.length > 1) {
+                param2Select.selectedIndex = 1;
+            }
         }
 
         // Get DOM elements
@@ -436,6 +438,9 @@
                     </div>
                 `;
                 document.querySelector('.content-wrapper').insertBefore(loadingIndicator, document.querySelector('.card'));
+
+                // Load available parameters first
+                await loadAvailableParameters();
 
                 // Use the enhanced weather station API
                 let data;
